movie-ranking.html

--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -5,5 +5,5 @@
 <p>Idk just a really good movie</p>
 <h3>Interstellar</h3>
 <p>Just amazing, acting, atmosphere, twists, you name it</p>
-<h3>A plave beyond the pines</h3>
+<h3>A place beyond the pines</h3>
 <p>A really creative structure</p>
